--- a/Ames.ipynb
+++ b/Ames.ipynb
@@ -3899,6 +3899,7 @@
     "ax.spines['bottom'].set_visible(False)\n",
     "ax.spines['left'].set_visible(False)\n",
     "\n",
+    "# PNG because LibreOffice can't handle transparency in SVGs\n",
     "plt.savefig(\"graphs/Model-predictions-nooutliers.png\", transparent=True, bbox_inches=\"tight\", dpi=150)"
    ]
   },
